syntax = "proto3";

import "google/api/annotations.proto";
// import "buf/validate/validate.proto";
import "protos/models/v1alpha1/vapusai.proto";
import "protos/models/v1alpha1/common.proto";

package vapusai.v1alpha1;

option go_package = "github.com/vapusdata-oss/apis/protos/vapusai/v1alpha1";

service AIPrompts{
    // Creates a new prompt.
    // @param {PromptManagerRequest} request - The request object containing the prompt manager.
    // @returns {PromptResponse} The response object containing the created prompt.
    rpc Manager(PromptManagerRequest) returns(PromptResponse) {
        option (google.api.http) = {
            post: "/api/v1alpha1/prompts"
            body: "*"
        };
    }

    // Retrieves a prompt.
    // @param {PromptGetterRequest} request - The request object containing the prompt getter.
    // @returns {PromptResponse} The response object containing the retrieved prompt.
    rpc Getter(PromptGetterRequest) returns(PromptResponse) {
        option (google.api.http) = {
            get: "/api/v1alpha1/prompts/{prompt_id}"
        };
    }
}

enum PromptAgentAction {
    INVALID_PROMPT_ACTION = 0;
    CONFIGURE_PROMPT = 1;
    ARCHIVE_PROMPT = 2;
    PATCH_PROMPT = 3;
}

message PromptManagerRequest {
    PromptAgentAction action = 1; // @gotags: yaml:"action"
    repeated models.v1alpha1.AIModelPrompt spec = 2; // @gotags: yaml:"spec"
}

message PromptGetterRequest {
    string prompt_id = 1; // @gotags: yaml:"promptId"
    models.v1alpha1.SearchParam search_param = 2; // @gotags: yaml:"SearchParam"
}

message PromptResponse {
    models.v1alpha1.DMResponse dm_resp = 1; // @gotags: yaml:"dmResp"
    repeated models.v1alpha1.AIModelPrompt output = 2; // @gotags: yaml:"output"
}
